# EHB-AI-DEV-

./: .env  .gitignore  .replit  .structure.json  AI_KNOWLEDGE_BASE_DOCUMENTATION.md  EHB-AI-AUTOMATION-README.md  EHB-HOME-Main-Redirector.restart  EHB-INTEGRATION-GUIDE.md  EHB-ORGANIZATION-README.md  EHB-PHASES-SUMMARY.md  EHB-PROGRESS-REPORT.md  EHB-README.md  EHB-REORGANIZATION-REPORT.md  EHB-STRUCTURE-OVERVIEW.md  EHB-STRUCTURE-REPORT.md  EHB-SYSTEM-ARCHITECTURE.md  EHB-package.json  __document.js  agent-log-limit.js  agent-log.txt  agent-performance.js  ai-agent-core-launcher.js  ai-agent-core-redirector.js  ai-agent-core-simple.js  ai-agent-simple-core.js  ai-agent-stub.js  alt-central-redirector.js  auto-github-sync.js  auto_file_processor.js  bsc.js  check-port-3003.js  check-port.js  clean-assets.js  clean_zips_and_temp.js  client.js  config.json  continue_ehb_restructure.sh  copy-free-agent-zips.js  copy-to-uploads.js  createTestZip.js  (+82 more)
EHB-HOME/: next.config.js  package.json
admin/: integration-script.js
api/: Pasted--Understood-bhai-Tum-chahte-ho-AI-Agent-Core-ka-1-Click-Total-Rebuild-All-Agents-Conn-1747227378359.txt  Pasted-Bhai-ab-main-aapko-deta-hoon-Replit-Agent-ke-liye-1-Click-Prompts-jisse-aap-File-change-par-1747078898997.txt  openai-helper.js  save-email-settings.js  save-webhook.js
config/: package.json  port-mapping.json
consolidated_ehb_system/: README-phase29.txt  README-phase31.txt  git-sync.sh
contracts/: Pasted-import-os-import-zipfile-Define-base-structure-base-dir-mnt-data-Fullstack-AI-Agent-fol-1747075406371.txt  SimpleNFT.sol
(+1598 files in other folders)
